--- a/Discipulo/login.html
+++ b/Discipulo/login.html
@@ -37,7 +37,7 @@
             </div>
 
             <!-- Columna derecha (Formulario) -->
-            <div class="col-sm-12 col-lg-4 d-flex justify-content-center">
+            <div class="col-sm-12 col-lg-5 d-flex justify-content-center">
                 <div class="container p-4 m-3 rounded border shadow-sm align-items-center">
                     <h2 id="title">Iniciar Sesión</h2>
                     <p id="sub" class="mb-3">Ingresa tus datos a continuación</p>
@@ -94,6 +94,13 @@
                                 <label class="mb-1" for="password">Verificación de contraseña</label>
                                 <input type="password" class="form-control" name="ver-password-register" placeholder="Vuelva a ingresar su contraseña" required autocomplete="off">
                             </div>
+
+                            <div class="form-check mb-3">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <label id="lbl-check" class="form-check-label" for="flexCheckDefault">
+                                  Estoy de acuerdo con los <a id="term" href="#">Términos y Condiciones.</a>
+                                </label>
+                              </div>
     
                             <div class="mt-4 d-flex align-items-center justify-content-between">
                                 <input type="submit" class="btn px-4 w-100" value="Registrar">
